add register and login api

--- a/client/src/app/components/auth/register/register.component.html
+++ b/client/src/app/components/auth/register/register.component.html
@@ -1,8 +1,8 @@
 <div class="registration-container">
     <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" class="registration-form">
       <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Username</mat-label>
-        <input matInput formControlName="username" type="text" required>
+        <mat-label>Name</mat-label>
+        <input matInput formControlName="name" type="text" required>
       </mat-form-field>
       
       <mat-form-field appearance="outline" class="w-100">
