updated register login ui

--- a/client/src/app/components/auth/login/login.component.html
+++ b/client/src/app/components/auth/login/login.component.html
@@ -12,6 +12,7 @@
   
       <div class="button-container">
         <button mat-raised-button color="primary" type="submit">Login</button>
+        <button mat-raised-button color="primary"  [routerLink]="['/home']">Home</button>
       </div>
   
       <div class="extra-links">
