--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="app-footer">
+<footer class="app-footer" *ngIf="showFooter">
     <div class="footer-content">
       <p>&copy; 2023 Your App Name. All rights reserved.</p>
     </div>
