--- a/client/src/app/components/auth/login/login.component.scss
+++ b/client/src/app/components/auth/login/login.component.scss
@@ -16,7 +16,7 @@
   
   .button-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;;
     margin-top: 20px;
   }
   
