--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="hero-text ">
           <h1>Store, Share, and Access Your Files Anywhere, Anytime.</h1>
           <p>The ultimate cloud storage solution for individuals and businesses.</p>
-          <button class="cta">Start Uploading Now</button>
+          <button class="cta" [routerLink]="['/dashboard']">Start Uploading Now</button>
         </div>
       </section>
     
