updated UI of home dashboard and shared files component

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -5,6 +5,7 @@
           <h1>Store, Share, and Access Your Files Anywhere, Anytime.</h1>
           <p>The ultimate cloud storage solution for individuals and businesses.</p>
           <button class="cta" [routerLink]="['/dashboard']">Start Uploading Now</button>
+          <button class="ctb mt-2 ms-1">Upgrade to Pro</button>
         </div>
       </section>
     
