--- a/client/src/app/components/view-files/view-files.component.html
+++ b/client/src/app/components/view-files/view-files.component.html
@@ -1,1 +1,9 @@
-<p>files</p>
+<span class="file-container">
+    <span class="header"> 
+        <span>file name</span>
+        <mat-icon>more_vert</mat-icon>
+    </span>
+    <div class="image-container">
+        <img src="../../../assets/images/cloud.jpg" alt="">
+    </div>
+</span>
