--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -3,12 +3,8 @@
     <div class="folders mt-2 ms-3 ">
         <app-view-folders class="view-folder" *ngFor="let folder of folders" [folder]="folder"></app-view-folders>
     </div>
-    <div>Files title</div>
-    <div class="files">
-        <app-view-files ></app-view-files>
-    </div>
-    <div>Shared files</div>
-    <div class="shared-files">
-        <app-shared-files></app-shared-files>
-    </div>
+    <div class="mt-3 ms-3">Files title</div>
+    <div class="files mt-2 ms-3">
+        <app-view-files *ngFor="let file of files" [file]="file" ></app-view-files>
+    </div> 
   </div>
