--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -19,6 +19,9 @@
           
             </ul>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/shared-with-me']">Shared with me</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
