--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -35,6 +35,7 @@ button.cta {
     color: white;
     padding: 10px 20px;
     border: none;
+    width: 180px;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -43,4 +44,17 @@ button.cta {
 button.cta:hover {
     background-color: #0056b3;
 }
+
+button.ctb {
+    background-color: #f95757;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    width: 180px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+
 
