--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
         <app-view-folders class="view-folder" *ngFor="let folder of folders" [folder]="folder"></app-view-folders>
     </div>
     <div class="mt-3 ms-3">Files title</div>
-    <div class="files mt-2 ms-3">
-        <app-view-files *ngFor="let file of files" [file]="file" ></app-view-files>
+    <div class="files mt-2 ms-3 mb-5 d-flex flex-wrap">
+        <app-view-files class="col-12 col-sm-5 col-md-3"  *ngFor="let file of files" [file]="file" ></app-view-files>
     </div> 
   </div>
