--- a/client/src/app/components/dashboard/dashboard.component.scss
+++ b/client/src/app/components/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
     margin-bottom: 10px;
 }
 
-.files{
-    display: flex;
-    flex-wrap: wrap;
-}
+// .files{
+//     display: flex;
+//     flex-wrap: wrap;
+// }
