--- a/client/src/app/components/footer/footer.component.scss
+++ b/client/src/app/components/footer/footer.component.scss
@@ -1,9 +1,9 @@
 .app-footer {
     background-color: #333;
     color: #fff;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    // position: absolute;
+    // bottom: 0;
+    // width: 100%;
   }
   
   .footer-content {
