--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -3,4 +3,11 @@
     height: 30px;
     width: 100%;
     margin-top: 20px;
+    position: absolute;
+    bottom: 0;
 }
+@media only screen and (max-width: 575px) {
+    .footer {
+        position: inherit;
+    }
+  }
