--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="dashboard">
     <div class="mt-3 ms-3">Folder Title</div>
-    <div class="folders mt-2 ms-3 ">
-        <app-view-folders class="view-folder" *ngFor="let folder of folders" [folder]="folder"></app-view-folders>
+    <div class="folders mt-2 ms-3  mb-5 me-2 ">
+        <app-view-folders class="mb-2 folder col-12 col-sm-6 col-md-3" *ngFor="let folder of folders" [folder]="folder"></app-view-folders>
     </div>
     <div class="mt-3 ms-3">Files title</div>
-    <div class="files mt-2 ms-3 mb-5 d-flex flex-wrap">
-        <app-view-files class="col-12 col-sm-5 col-md-3"  *ngFor="let file of files" [file]="file" ></app-view-files>
+    <div class="files mt-2 ms-3 mb-5 d-flex  flex-wrap">
+        <app-view-files class="col-12 col-sm-6 col-md-3"  *ngFor="let file of files" [file]="file" ></app-view-files>
     </div> 
   </div>
