--- a/client/src/app/components/view-folders/view-folders.component.scss
+++ b/client/src/app/components/view-folders/view-folders.component.scss
@@ -1,16 +1,13 @@
-.folder-container{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    width: 169px;
-    margin-right: 10px;
-    background-color: #d4e5ff;
-    border-radius:5px;
-    padding: 5px;
-    
-    
+.folder-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #d4e5ff;
+  border-radius: 5px;
+  padding: 5px;
+  margin-right: 10px;
 }
-.folder-container:hover{
-    border: 1px solid  #0B57D0;
-    cursor: pointer;
+.folder-container:hover {
+  border: 1px solid #0b57d0;
+  cursor: pointer;
 }
