consumed folders api

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -20,6 +20,9 @@
             </ul>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/dashboard']">Dashboard</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/shared-with-me']">Shared with me</a>
           </li>
         </ul>
