--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -56,5 +56,11 @@ button.ctb {
     transition: background-color 0.3s ease;
 }
 
+@media (min-width: 428px) {
+    .button.ctb {
+     margin-left: 5px;
+    }
+  }
+
 
 
