--- a/client/src/app/components/view-folders/view-folders.component.html
+++ b/client/src/app/components/view-folders/view-folders.component.html
@@ -1,6 +1,6 @@
 
     <span class="folder-container">
         <mat-icon>folder</mat-icon>
-        <span>folder name</span>
+        <span>{{folder.folderName}}</span>
         <mat-icon>more_vert</mat-icon>
     </span>
