--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,11 @@
 <div class="dashboard">
+    <div class="d-flex mt-3">
+        <button class="btn btn-outline-primary ms-2 me-2" (click)="addFolder()">Add Folder</button>
+        <button class="btn btn-outline-success">Upload file</button>
+    </div>
     <div class="mt-3 ms-3">Folder Title</div>
     <div class="folders mt-2 ms-3  mb-5 me-2 ">
-        <app-view-folders class="mb-2 folder col-12 col-sm-6 col-md-3" *ngFor="let folder of folders" [folder]="folder"></app-view-folders>
+        <app-view-folders class="mb-2 folder col-6 col-sm-4 col-md-3" *ngFor="let folder of folders | async" [folder]="folder"></app-view-folders>
     </div>
     <div class="mt-3 ms-3">Files title</div>
     <div class="files mt-2 ms-3 mb-5 d-flex  flex-wrap">
