--- a/client/src/app/components/shared-files/shared-files.component.html
+++ b/client/src/app/components/shared-files/shared-files.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard">
+<!-- <div class="dashboard">
     <div class="mt-3 ms-3">Folder Title</div>
     <div class="folders mt-2 ms-3 ">
         <app-view-folders class="view-folder" *ngFor="let folder of folders" [folder]="folder"></app-view-folders>
@@ -7,4 +7,4 @@
     <div class="files mt-2 ms-3">
         <app-view-files *ngFor="let file of files" [file]="file" ></app-view-files>
     </div> 
-  </div>
+  </div> -->
