--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard">
     <div class="d-flex mt-3">
-        <button class="btn btn-outline-primary ms-2 me-2" (click)="addFolder()">Add Folder</button>
+        <button class="btn btn-outline-primary ms-2 me-2" (click)="addFolderDialog()">Add Folder</button>
         <button class="btn btn-outline-success">Upload file</button>
     </div>
     <div class="mt-3 ms-3">Folder Title</div>
