--- a/client/src/app/utils/dialog/add-folder/add-folder.component.html
+++ b/client/src/app/utils/dialog/add-folder/add-folder.component.html
@@ -2,11 +2,11 @@
 <mat-dialog-content>
   <form [formGroup]="folderForm">
     <mat-form-field class="w-100" appearance="outline">
-      <input matInput placeholder="Folder Name" formControlName="folderName.formName">
+      <input matInput placeholder="Folder Name" formControlName="folderName">
     </mat-form-field>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button class="btn btn-secondary me-2" >Cancel</button>
+  <button class="btn btn-secondary me-2" mat-dialog-close >Cancel</button>
   <button class="btn btn-primary" (click)="addFolder()">Add Folder</button>
 </mat-dialog-actions>
