binded upload files api

--- a/client/src/app/components/view-files/view-files.component.html
+++ b/client/src/app/components/view-files/view-files.component.html
@@ -1,9 +1,10 @@
 <span class="file-container">
     <span class="header"> 
-        <span>file name</span>
+        <span>{{file.fileName}}</span>
         <mat-icon>more_vert</mat-icon>
     </span>
     <div class="image-container">
-        <img src="../../../assets/images/cloud.jpg" alt="">
+        <img src="../../../assets/images/cloud.jpg" alt="image">
+    <mat-icon>file</mat-icon>
     </div>
 </span>
