--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -1,7 +1,7 @@
 .landing-page {
     font-family: 'Arial', sans-serif;
     margin: 0 auto;
-    height: calc(100vh - 42px - 52px);
+    height: calc(100vh - 52px);
    
 }
 
