--- a/client/src/app/components/view-folders/view-folders.component.html
+++ b/client/src/app/components/view-folders/view-folders.component.html
@@ -2,5 +2,25 @@
     <span class="folder-container">
         <mat-icon>folder</mat-icon>
         <span>{{folder.folderName}}</span>
-        <mat-icon>more_vert</mat-icon>
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>
+                <mat-icon>delete_forever</mat-icon>
+              <span>Delete</span>
+            </button>
+            <button mat-menu-item>
+                <mat-icon>visibility</mat-icon>
+              <span>View</span>
+            </button>
+            <button mat-menu-item>
+                <mat-icon>create</mat-icon>
+              <span>Rename</span>
+            </button>
+            <button mat-menu-item>
+                <mat-icon>share</mat-icon>
+                <span>Share</span>
+              </button>
+          </mat-menu>
     </span>
