previous commit changes

--- a/client/src/app/components/view-files/view-files.component.html
+++ b/client/src/app/components/view-files/view-files.component.html
@@ -14,8 +14,8 @@
               <span>View</span>
             </button>
             <button mat-menu-item>
-                <mat-icon>create</mat-icon>
-              <span>Rename</span>
+                <mat-icon>download</mat-icon>
+              <span>Download</span>
             </button>
             <button mat-menu-item>
                 <mat-icon>share</mat-icon>
