--- a/client/src/app/components/upload-file/upload-file.component.html
+++ b/client/src/app/components/upload-file/upload-file.component.html
@@ -1,3 +1,3 @@
 
 <input type="file" #file (change)="uploadFiles($event)" hidden multiple>
-<button class="btn btn-outline-success" (click)="file.click()" >Upload file</button>
+<button class="btn btn-outline-success" (click)="file.click()" >{{ uploaded ? 'Upload Files' : 'Uploading...'}}</button>
