--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -1,14 +1,29 @@
 <div class="dashboard">
-    <div class="d-flex mt-3">
-        <button class="btn btn-outline-primary ms-2 me-2" (click)="addFolderDialog()">Add Folder</button>
-        <app-upload-file (uploadedFiles)="updateFiles($event)"></app-upload-file>
-    </div>
-    <div class="mt-3 ms-3">Folder Title</div>
-    <div class="folders mt-2 ms-3  mb-5 me-2 ">
-        <app-view-folders class="mb-2 folder col-6 col-sm-4 col-md-3" *ngFor="let folder of folders$ | async" [folder]="folder"></app-view-folders>
-    </div>
-    <div class="mt-3 ms-3">Files title</div>
-    <div class="files mt-2 ms-3 mb-5 d-flex  flex-wrap">
-        <app-view-files class="col-12 col-sm-6 col-md-3"  *ngFor="let file of files$ | async" [file]="file" ></app-view-files>
-    </div> 
+  <div class="d-flex mt-3">
+    <button
+      class="btn btn-outline-primary ms-2 me-2"
+      (click)="addFolderDialog()"
+    >
+      Add Folder
+    </button>
+    <app-upload-file (uploadedFiles)="updateFiles($event)"></app-upload-file>
   </div>
+  <div class="mt-3 ms-3">Folder Title</div>
+  <div class="folders mt-2 ms-3 mb-5 me-2">
+    <app-view-folders
+      class="mb-2 folder col-6 col-sm-4 col-md-3"
+      *ngFor="let folder of folders$ | async"
+      [folder]="folder"
+      (deletedFolder)="folderDeleted($event)"
+      (renamedFolder)="renameFolder($event)"
+    ></app-view-folders>
+  </div>
+  <div class="mt-3 ms-3">Files title</div>
+  <div class="files mt-2 ms-3 mb-5 d-flex flex-wrap">
+    <app-view-files
+      class="col-12 col-sm-6 col-md-3"
+      *ngFor="let file of files$ | async"
+      [file]="file"
+    ></app-view-files>
+  </div>
+</div>
