binded delete file api

--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -24,6 +24,7 @@
       class="col-12 col-sm-6 col-md-3"
       *ngFor="let file of files$ | async"
       [file]="file"
+      (fileDeleted)="deleteFile($event)"
     ></app-view-files>
   </div>
 </div>
