--- a/client/src/app/components/Folder/view-folders.component.html
+++ b/client/src/app/components/Folder/view-folders.component.html
@@ -10,7 +10,7 @@
                 <mat-icon>delete_forever</mat-icon>
               <span>Delete</span>
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item [routerLink]="['/folder/view-folder']">
                 <mat-icon>visibility</mat-icon>
               <span>View</span>
             </button>
