--- a/client/src/app/components/shared-files/shared-files.component.html
+++ b/client/src/app/components/shared-files/shared-files.component.html
@@ -1,10 +1,10 @@
-<!-- <div class="dashboard">
+<div class="dashboard">
     <div class="mt-3 ms-3">Folder Title</div>
     <div class="folders mt-2 ms-3 ">
-        <app-view-folders class="view-folder" *ngFor="let folder of folders" [folder]="folder"></app-view-folders>
+        <app-view-folders class="view-folder" *ngFor="let folder of folders$ | async" [folder]="folder"></app-view-folders>
     </div>
     <div class="mt-3 ms-3">Files title</div>
     <div class="files mt-2 ms-3">
-        <app-view-files *ngFor="let file of files" [file]="file" ></app-view-files>
+        <app-view-files *ngFor="let file of files$  | async" [file]="file" ></app-view-files>
     </div> 
-  </div> -->
+  </div>
