get shared folders

--- a/client/src/app/components/shared-files/shared-files.component.scss
+++ b/client/src/app/components/shared-files/shared-files.component.scss
@@ -5,8 +5,7 @@
 .view-folder{
     margin-bottom: 10px;
 }
-
-.files{
-    display: flex;
-    flex-wrap: wrap;
-}
+// .files{
+//     display: flex;
+//     flex-wrap: wrap;
+// }
