--- a/client/src/app/components/dashboard/dashboard.component.html
+++ b/client/src/app/components/dashboard/dashboard.component.html
@@ -3,10 +3,11 @@
     <button
       class="btn btn-outline-primary ms-2 me-2"
       (click)="addFolderDialog()"
+      *ngIf="!shared"
     >
       Add Folder
     </button>
-    <app-upload-file (uploadedFiles)="updateFiles($event)"></app-upload-file>
+    <app-upload-file (uploadedFiles)="updateFiles($event)"  *ngIf="!shared "></app-upload-file>
   </div>
   <div class="mt-3 ms-3">Folder Title</div>
   <div class="folders mt-2 ms-3 mb-5 me-2">
