--- a/client/src/app/components/shared-files/shared-files.component.html
+++ b/client/src/app/components/shared-files/shared-files.component.html
@@ -8,7 +8,11 @@
       ></app-view-folders>
     </div>
     <div class="mt-3 ms-3">Files title</div>
-    <div class="files mt-2 ms-3">
-        <!-- <app-view-files *ngFor="let file of files$  | async" [file]="file" ></app-view-files> -->
-    </div> 
+    <div class="files mt-2 ms-3 mb-5 d-flex flex-wrap">
+      <app-view-files
+        class="col-12 col-sm-6 col-md-3"
+        *ngFor="let file of files$ | async"
+        [file]="file"
+      ></app-view-files>
+    </div>
   </div>
