--- a/client/src/app/components/Folder/view-folders.component.html
+++ b/client/src/app/components/Folder/view-folders.component.html
@@ -18,7 +18,7 @@
                 <mat-icon>create</mat-icon>
               <span>Rename</span>
             </button>
-            <button mat-menu-item *ngIf="!isShared && !shared">
+            <button mat-menu-item *ngIf="!isShared && !shared" (click)="shareFolder(folder)">
                 <mat-icon>share</mat-icon>
                 <span>Share</span>
               </button>
