added logger middleware

--- a/client/src/app/components/auth/register/register.component.html
+++ b/client/src/app/components/auth/register/register.component.html
@@ -14,6 +14,8 @@
         <mat-label>Password</mat-label>
         <input matInput formControlName="password" type="password" required>
       </mat-form-field>
+      <!-- <app-address-group legend="Address" controlKey="address"></app-address-group>
+      <app-address-group legend="Address2" controlKey="address2"></app-address-group> -->
   
       <div class="button-container">
         <button mat-raised-button color="primary" type="submit">Register</button>
